--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 
 <h1>My First Heading</h1>
   <p>Hello World! I'm <em>freezing</em> in <strong>Dallas</strong>.</p>
- 
+ <p><strong>Do you wanna build a snowman?</strong></p>
+ <p> C'mon, lets go and play</p>
+ <p>I never see you anymore</p>
+
 </body>
 </html>
