--- a/week02/coding101.html
+++ b/week02/coding101.html
@@ -30,6 +30,7 @@
  <li>Bake for 25 minutes or until golden brown.</li>
 </ol>
    
+<p> <a href="https://aahanp1.github.io/aahanITSE22/week02/index.html">Visit my Corvette image page </a></p>
 
 </body>
 </html>
