--- a/week04/index.html
+++ b/week04/index.html
@@ -11,10 +11,10 @@
   </head>
 
   <body>
-
+<header>
       <h1>Birdwatching</h1>
       <img src="dove.png" alt="a simple dove logo">
-
+    </header>
 
       <ul>
         <li><span>Home</span></li>
