--- a/week04/recipe.html
+++ b/week04/recipe.html
@@ -2,7 +2,7 @@
 <html>
   <head>
      <meta charset="UTF-8">
-    <title>Tortilla Pizzas</title>
+    <title>Recipe For Tortilla Pizzas</title>
     <link rel="stylesheet" href="recipe.css">
   </head>
 
