--- a/week05/javascript.html
+++ b/week05/javascript.html
@@ -5,11 +5,29 @@
         <title> Web Design 2: Aahan's javascript Page</title>
         <script>
             function showAlert() {
-              alert ("Hello world!");
+              var myText = "Welcome to my Test page";
+              alert (myText);
             }
-            </script> 
+            </script>
+            <style>
+                button {
+    font-size: 1.1em;
+    background-color: #EBF5FF;
+    color: #4312AE;
+    border: 2px solid black;
+    box-shadow: 4px 4px 4px #999999;
+  }
+  button:hover, button:focus, button:active {
+    /* swap colors */
+    color: #EBF5FF;
+    background-color: #4312AE;
+    cursor: pointer; /* displays a hand */
+  }
+            </style>
     </head>
-    <body onload="showAlert()">
+    <body>
+
+    <button onclick="showAlert()">Show alert</button>
 
         <!-- The content of your webpage will go here-->
     </body>
