--- a/week05/stockvariables.html
+++ b/week05/stockvariables.html
@@ -18,8 +18,8 @@
         <script>
             document.write("Ford: " + ford + "<br>");
             document.write("Nissan: " + nissan + "<br>");
+            document.write("Ethereum: " + ethereum + "<br>"); 
             document.write("Tesla: " + tesla + "<br>");
-            document.write("AT&T: " + att + "<br>");
             document.write("Microsoft: " + microsoft + "<br>");
             
         </script> 
