finish future fortune

--- a/week07/fortune.html
+++ b/week07/fortune.html
@@ -7,7 +7,8 @@
   
   <body>
     <h1>Your Fortune</h1>
-    <script>
+    <script
+        src='future.js'>
     </script>
    <button
       onclick="window.location.href=window.location.href">Refresh Page</button>
