--- a/week07/fortune.html
+++ b/week07/fortune.html
@@ -7,8 +7,7 @@
   
   <body>
     <h1>Your Fortune</h1>
-    <script
-        src='future.js'>
+    <script src='future.js'>
     </script>
    <button
       onclick="window.location.href=window.location.href">Refresh Page</button>
